<resources>
    <string name="app_name">V de Voluntario</string>
    <string name="tv_forgot_password"><u>Esqueci a senha</u></string>
    <string name="btn_signin">Entrar</string>
    <string name="tv_signup">Não tem conta? Cadastre-se</string>
    <string name="ok">OK</string>
    <string name="toast_loginInvalidate">Email ou senha inválidos!</string>
    <string name="toast_loginValidate">Login realizado com sucesso!</string>
    <string name="btn_sign_up">Cadastrar</string>
    <string name="dialog_diffPassword">A senha difere da senha de confirmação</string>
    <string name="hint_name">Nome completo</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_passwordConfirm">Confirme sua senha</string>
    <string name="msg_signedUp">Cadastrado com sucesso!</string>
    <string name="toast_errorCreateUser">Erro ao gravar usuário!</string>
    <string name="toast_errorCreateGroup">Erro ao gravar grupo!</string>
    <string name="txt_getNewPassword">Informe seu e-mail para que lhe seja enviado um link de recuperação de senha.</string>
    <string name="btn_send">Enviar</string>
    <string name="toast_fillEmail">Preencha o campo de e-mail.</string>
    <string name="dialog_verifyEmail">E-mail enviado com sucesso!</string>
    <string name="snackbar_sendEmailFail">Falha ao enviar e-mail</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_contribute">Pedidos</string>
    <string name="tab_oferecer">Ofertas</string>
    <string name="example_volName">Wesley Chan</string>
    <string name="example_postTitle">Campanha do Agasalho</string>
    <string name="example_postDescription">Que tal doar suas roupas boas e fazer alguém feliz com a sua doação?</string>
    <string name="example_msg">Olá Ted! Gostaria de contribuir com a sua causa, já que blablabla</string>
    <string name="btn_createOffer">Criar oferta voluntária</string>
    <string name="btn_showOffer">Gerenciar ofertas</string>
    <string name="dialog_chooseProfilePhoto">Escolha a sua foto de perfil</string>
    <string name="dialog_chooseProfilePhotoInstitute">Escolha a foto de perfil</string>
    <string name="dialog_chooseArea">Escolha uma área de atuação</string>
    <string name="new_group">Novo grupo</string>
    <string name="example_institute">Wong Fu Productions</string>
    <string name="example_volunteer">Wesley Chan</string>
    <string name="hint_instituteName">Nome da instituição</string>
    <string name="hint_adress">Endereço</string>
    <string name="hint_site">Site</string>
    <string name="hint_phone">Telefone</string>
    <string name="hint_category">Categoria</string>
    <string name="aditional_photos">Fotos adicionais(opcional)</string>
    <string name="btn_next">Seguinte</string>
    <string name="btn_create">Criar</string>
    <string name="label_participants">Participantes</string>
    <string name="btn_updateUser">Atualizar dados</string>
    <string name="btn_update">Atualizar</string>
    <string name="btn_updatePassword">Alterar senha</string>
    <string name="hint_actualPassword">Senha atual</string>
    <string name="hint_newPassword">Nova senha</string>
    <string name="hint_confirmPassword">Confirme sua nova senha</string>
    <string name="toast_emptyName">Preencha o campo nome</string>
    <string name="toast_sameName">Nome digitado é igual ao cadastrado</string>
    <string name="toast_diferentActualPassword">Senha atual difere da cadastrada</string>
    <string name="toast_diferentConfirmationPassword">Nova senha difere da senha de confirmação</string>
    <string name="toast_passwordUpdated">Senha atualizada com sucesso!</string>
    <string name="toast_passwordNotUpdated">Falha ao alterar a senha!</string>
    <string name="hint_newName">Novo nome</string>
    <string name="example_instituteName">Wong Fu Productions</string>
    <string name="btn_createVolunteerOffer">Criar oferta voluntária</string>
    <string name="btn_createDemand">Criar demanda para os voluntários</string>
    <string name="btn_checkChat">Ver conversas</string>
    <string name="btn_manageParticipants">Gerenciar participantes</string>
    <string name="hint_postDescription">Descrição da postagem</string>
    <string name="btn_publish">Publicar</string>
    <string name="hint_postTitle">Título da postagem</string>
    <string name="toast_posted">Postado!</string>
    <string name="toast_updated">Atualizado!</string>
    <string name="hint_addParticipants">Adicionar participantes</string>
    <string name="hint_typeYourMessage">Digite sua mensagem..</string>
    <string name="toast_failLoadingData">Falha ao carregar os dados!</string>
    <string name="no_results">Nenhum resultado encontrado.</string>
    <string name="progressbar_no_results">Nenhum resultado foi encontrado.\n Inicie uma conversa com alguém através das postagens</string>
    <string name="example_hour">11:45</string>
    <string name="toast_errorCreatingContact">Erro ao gravar contato!</string>
    <string name="toast_errorCreatingMessage">Erro ao cadastrar mensagem!</string>
    <string name="toast_errorCreatingChat">Erro ao cadastrar conversa!</string>
    <string name="toast_created">Cadastrado!</string>
    <string name="toast_needParticipants">Adicione participantes para pertencer ao seu grupo</string>
    <string name="toast_selfpost">Esta é a sua própria postagem</string>
    <string name="new_post">Nova postagem</string>
    <string name="data_notFound">Nenhum dado encontrado</string>
    <string name="group_notFound">Nenhum grupo encontrado.</string>
    <string name="post_notFound">Nenhuma postagem encontrada.</string>
    <string name="menu_update">Alterar</string>
    <string name="menu_delete">Excluir</string>
    <string name="btn_manageDemand">Gerenciar pedidos</string>
    <string name="btn_manageOffer">Gerenciar ofertas</string>
    <string name="new_demand">Novo pedido</string>
    <string name="new_offer">Nova oferta</string>
</resources>
