<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingStart="50dp"
    android:paddingEnd="50dp"
    >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_vvol"
        android:layout_marginTop="45dp"
        />

    <EditText
        android:id="@+id/login_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/login_et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:id="@+id/login_tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_forgot_password"
        android:layout_gravity="end"
        android:layout_marginTop="10dp"
        />

    <Button
        android:id="@+id/login_btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_signin"
        style="@style/ButtonStyle"
        android:layout_marginTop="45dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        />

    <TextView
        android:id="@+id/login_tv_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_signup"
        android:layout_marginTop="15dp"
        />

</LinearLayout>
