<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ci_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/colorWhite"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <!-- Photo + Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/ci_civ_photo"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="2.75"
                    android:src="@mipmap/ic_group"
                    />

                <TextView
                    android:id="@+id/ci_tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7.25"
                    android:hint="@string/hint_instituteName"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>

            <!-- Adress -->
            <TextView
                android:id="@+id/ci_tv_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_adress"
                android:textSize="20sp"
                />

            <!-- Site -->
            <TextView
                android:id="@+id/ci_tv_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_site"
                android:textSize="20sp"
                />

            <!-- Phone + Category -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <TextView
                    android:id="@+id/ci_tv_phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/hint_phone"
                    android:textSize="20sp"
                    android:layout_marginEnd="5dp"
                    />

                <TextView
                    android:id="@+id/ci_tv_category"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:hint="@string/hint_category"
                    android:textSize="20sp"
                    />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorMountainMist"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                />

            <!-- Participants -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/label_participants"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_participants"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                />

            <!-- Add participants -->
            <LinearLayout
                android:id="@+id/ci_ll_add_participants"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                android:layout_marginTop="15dp"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="2"
                    android:src="@mipmap/ic_add"
                    />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="8"
                    android:text="@string/hint_addParticipants"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    />
            </LinearLayout>

            <!-- Next Button -->
            <Button
                android:id="@+id/ci_btn_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/btn_create"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>