<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/ca_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/ca_profile_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                app:civ_border_width="0.1dp"
                app:civ_border_color="@color/colorPrimaryDark"
                app:civ_fill_color="@color/colorPrimary"
                android:src="@drawable/ic_action_camera"
                />

            <EditText
                android:id="@+id/ca_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                />

            <EditText
                android:id="@+id/ca_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_email"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                >

                <EditText
                    android:id="@+id/ca_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimary"
                >

                <EditText
                    android:id="@+id/ca_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_passwordConfirm"
                    android:inputType="textPassword"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/ca_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/btn_sign_up"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="40dp"
                />

        </LinearLayout>
    </ScrollView>

</LinearLayout>