<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/fp_ll"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/fp_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/colorWhite"
        />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_vvol"
        android:layout_marginTop="40dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_getNewPassword"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/fp_et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/hint_email"
        android:layout_marginTop="50dp"
        />

    <Button
        android:id="@+id/fp_btn_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_send"
        style="@style/ButtonStyle"
        android:layout_marginTop="50dp"
        />

</LinearLayout>
</LinearLayout>