<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/checkin_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/colorWhite"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            >

            <!-- Photo + Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="10"
                >

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/checkin_civ_photo"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_weight="2.75"
                    android:src="@mipmap/ic_group"
                    />

                <EditText
                    android:id="@+id/checkin_et_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="7.25"
                    android:hint="@string/hint_instituteName"
                    android:textSize="20sp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    />

            </LinearLayout>

            <!-- Adress -->
            <EditText
                android:id="@+id/checkin_et_adress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_adress"
                android:textSize="20sp"
                />

            <!-- Site -->
            <EditText
                android:id="@+id/checkin_et_site"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_site"
                android:textSize="20sp"
                />

            <!-- Phone + Category -->
            <EditText
                android:id="@+id/checkin_et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_phone"
                android:textSize="20sp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                />

            <TextView
                android:id="@+id/checkin_tv_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"
                android:layout_marginTop="15dp"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                />

            <!-- Next Button -->
            <Button
                android:id="@+id/checkin_btn_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/btn_update"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="40dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>