<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/cp_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        app:titleTextColor="@color/colorWhite"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            >

            <ImageView
                android:id="@+id/cp_post_photo"
                android:layout_width="300dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:src="@mipmap/ic_camera"
                />

            <EditText
                android:id="@+id/cp_post_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColor="@color/colorBlack"
                android:hint="@string/hint_postTitle"
                android:lines="1"
                android:minLines="1"
                android:singleLine="true"
                android:maxLines="1"
                />

            <EditText
                android:id="@+id/cp_post_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textColor="@color/colorBlack"
                android:hint="@string/hint_postDescription"
                android:minLines="1"
                android:maxLines="10"
                />

            <Button
                android:id="@+id/cp_publish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/btn_publish"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="25dp"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>